# DevOp

./: Class.cpp  Class.cpp.orig  Class_H.h  Makefile  Makefile.am  Makefile.in  class  class.elf  config.status  configure  configure.ac  configure~  main.cpp  program  test  test.cpp
.deps/: Class.Po  main.Po  test.Po
.github/workflows/: c-cpp.yml  debian.yml  test.yml
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
deb/DEBIAN/: control
